crates/ars-components/src/layout/carousel/snapshots/ars_components__layout__carousel__tests__auto_play_trigger_playing.snap
---
source: crates/ars-components/src/layout/carousel/mod.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).auto_play_trigger_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "auto-play-trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "carousel",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Pause automatic slide show",
            ),
        ),
        (
            Aria(
                Pressed,
            ),
            String(
                "true",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
