crates/ars-components/src/layout/carousel/snapshots/ars_components__layout__carousel__tests__autoplay_indicator_playing.snap
---
source: crates/ars-components/src/layout/carousel/mod.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).autoplay_indicator_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "auto-play-indicator",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "carousel",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "playing",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
    ],
    styles: [],
}
