crates/ars-components/src/layout/carousel/snapshots/ars_components__layout__carousel__tests__indicator_group.snap
---
source: crates/ars-components/src/layout/carousel/mod.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).indicator_group_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "indicator-group",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "carousel",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Choose slide",
            ),
        ),
        (
            Role,
            String(
                "tablist",
            ),
        ),
    ],
    styles: [],
}
