crates/ars-components/src/layout/carousel/snapshots/ars_components__layout__carousel__tests__indicator_selected.snap
---
source: crates/ars-components/src/layout/carousel/mod.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).indicator_attrs(0))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "indicator",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "carousel",
            ),
        ),
        (
            Aria(
                Selected,
            ),
            String(
                "true",
            ),
        ),
        (
            Role,
            String(
                "tab",
            ),
        ),
    ],
    styles: [],
}
