crates/ars-components/src/layout/carousel/snapshots/ars_components__layout__carousel__tests__indicator_unselected.snap
---
source: crates/ars-components/src/layout/carousel/mod.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).indicator_attrs(1))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "indicator",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "carousel",
            ),
        ),
        (
            Aria(
                Selected,
            ),
            String(
                "false",
            ),
        ),
        (
            Role,
            String(
                "tab",
            ),
        ),
    ],
    styles: [],
}
