crates/ars-components/src/layout/carousel/snapshots/ars_components__layout__carousel__tests__item_group_off.snap
---
source: crates/ars-components/src/layout/carousel/mod.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).item_group_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "item-group",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "carousel",
            ),
        ),
        (
            Aria(
                Live,
            ),
            String(
                "off",
            ),
        ),
    ],
    styles: [],
}
